js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromBlock/lib1/l1a.0.kt
fun foo() {
    fooX = 0
}
